NetBSD Problem Report #56478

From www@netbsd.org  Sun Oct 31 08:01:05 2021
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 1F5261A9239
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 31 Oct 2021 08:01:05 +0000 (UTC)
Message-Id: <20211031080103.A28951A923A@mollari.NetBSD.org>
Date: Sun, 31 Oct 2021 08:01:03 +0000 (UTC)
From: nia@pkgsrc.org
Reply-To: nia@pkgsrc.org
To: gnats-bugs@NetBSD.org
Subject: unused wm0 periodically prints "device timeout" and causes kernel latency
X-Send-Pr-Version: www-1.0

>Number:         56478
>Category:       kern
>Synopsis:       unused wm0 periodically prints "device timeout" and causes kernel latency
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    msaitoh
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Oct 31 08:05:00 +0000 2021
>Closed-Date:    Wed Nov 10 13:49:21 +0000 2021
>Last-Modified:  Sat Nov 20 15:15:01 +0000 2021
>Originator:     nia
>Release:        NetBSD 9.99.92 amd64
>Organization:
The NetBSD Foundation, Inc
>Environment:
NetBSD 9.99.92 amd64
>Description:
booting with dhcpcd=YES, with no cable plugged into my wm0, it
periodically spams dmesg:

[  1152.784855] wm0: device timeout (txfree 4032 txsfree 0 txnext 76)
[  1176.035005] wm0: device timeout (txfree 4032 txsfree 0 txnext 79)
[  1201.285172] wm0: device timeout (txfree 4032 txsfree 0 txnext 76)

until `ifconfig wm0 down`.

It causes audio skipping until the ifconfig down,
presumably due to a spike in system load.
>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: SAITOH Masanobu <msaitoh@execsw.org>
To: gnats-bugs@netbsd.org, kern-bug-people@netbsd.org,
 gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Cc: msaitoh@execsw.org
Subject: Re: kern/56478: unused wm0 periodically prints "device timeout" and
 causes kernel latency
Date: Mon, 1 Nov 2021 13:22:27 +0900

 On 2021/10/31 17:05, nia@pkgsrc.org wrote:
 >> Number:         56478
 >> Category:       kern
 >> Synopsis:       unused wm0 periodically prints "device timeout" and causes kernel latency
 >> Confidential:   no
 >> Severity:       non-critical
 >> Priority:       medium
 >> Responsible:    kern-bug-people
 >> State:          open
 >> Class:          sw-bug
 >> Submitter-Id:   net
 >> Arrival-Date:   Sun Oct 31 08:05:00 +0000 2021
 >> Originator:     nia
 >> Release:        NetBSD 9.99.92 amd64
 >> Organization:
 > The NetBSD Foundation, Inc
 >> Environment:
 > NetBSD 9.99.92 amd64
 >> Description:
 > booting with dhcpcd=YES, with no cable plugged into my wm0, it
 > periodically spams dmesg:
 > 
 > [  1152.784855] wm0: device timeout (txfree 4032 txsfree 0 txnext 76)
 > [  1176.035005] wm0: device timeout (txfree 4032 txsfree 0 txnext 79)
 > [  1201.285172] wm0: device timeout (txfree 4032 txsfree 0 txnext 76)
 > 
 > until `ifconfig wm0 down`.
 > 
 > It causes audio skipping until the ifconfig down,
 > presumably due to a spike in system load.
 >> How-To-Repeat:
 > 
 >> Fix:
 > 

 dmesg please.

 -- 
 -----------------------------------------------
                  SAITOH Masanobu (msaitoh@execsw.org
                                   msaitoh@netbsd.org)

From: nia <nia@NetBSD.org>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/56478: unused wm0 periodically prints "device timeout" and
 causes kernel latency
Date: Mon, 1 Nov 2021 07:25:01 +0000

 On Mon, Nov 01, 2021 at 04:25:02AM +0000, SAITOH Masanobu wrote:
 >  dmesg please.

 [     1.017088] wm0 at pci0 dev 25 function 0: I218 LM Ethernet Connection (rev. 0x03)
 [     1.017088] wm0: interrupting at msi1 vec 0
 [     1.017088] wm0: PCI-Express bus
 [     1.017088] wm0: 2048 words FLASH, version 0.2.3
 [     1.017088] wm0: Ethernet address 50:7b:9d:ab:be:0b
 [     1.017088] wm0: 0x6a4080<FLASH,PCIE,ASF_FIRM,AMT,WOL,EEE>
 [     1.017088] ihphy0 at wm0 phy 2: i217 10/100/1000 media interface, rev. 5
 [     1.017088] ihphy0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, 1000baseT, 1000baseT-FDX, auto

Responsible-Changed-From-To: kern-bug-people->msaitoh
Responsible-Changed-By: msaitoh@NetBSD.org
Responsible-Changed-When: Tue, 02 Nov 2021 05:15:18 +0000
Responsible-Changed-Why:
mine.


From: "SAITOH Masanobu" <msaitoh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/56478 CVS commit: src/sys/dev/pci
Date: Fri, 5 Nov 2021 05:52:50 +0000

 Module Name:	src
 Committed By:	msaitoh
 Date:		Fri Nov  5 05:52:49 UTC 2021

 Modified Files:
 	src/sys/dev/pci: if_wm.c

 Log Message:
 Fix a bug that device timeout still happens on ICH/PCH. Fixes PR kern/56478.

  - if_wm.c rev. 1.695 for PR kern/40981 still had a problem. The workaround
    flag was unexpectedly cleared when a cable is not connected, SIOCINITIFADDR
    was called, or if_init was called. Fix it.
  - Add debug printf()s.


 To generate a diff of this commit:
 cvs rdiff -u -r1.717 -r1.718 src/sys/dev/pci/if_wm.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: msaitoh@NetBSD.org
State-Changed-When: Wed, 10 Nov 2021 13:49:21 +0000
State-Changed-Why:
Fixed. Thanks!


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/56478 CVS commit: [netbsd-9] src/sys/dev
Date: Sat, 20 Nov 2021 14:59:04 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sat Nov 20 14:59:04 UTC 2021

 Modified Files:
 	src/sys/dev/mii [netbsd-9]: ihphy.c
 	src/sys/dev/pci [netbsd-9]: if_wm.c if_wmreg.h

 Log Message:
 Pull up the following, requested by msaitoh in ticket #1373:

 	sys/dev/pci/if_wm.c				1.716-1.718 via patch
 	sys/dev/pci/if_wmreg.h				1.121
 	sys/dev/mii/ihphy.c				1.20

 - Fix a bug that device timeout still happens when the link is down
   on ICH/PCH. Fixes PR kern/56478.
 - Add some sysctl info for debugging.
 - ihphy(4): Don't power down the PHY when the interface goes down.
 - Use macro. Fix comment.


 To generate a diff of this commit:
 cvs rdiff -u -r1.14.4.1 -r1.14.4.2 src/sys/dev/mii/ihphy.c
 cvs rdiff -u -r1.645.2.11 -r1.645.2.12 src/sys/dev/pci/if_wm.c
 cvs rdiff -u -r1.115.2.3 -r1.115.2.4 src/sys/dev/pci/if_wmreg.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/56478 CVS commit: [netbsd-8] src/sys/dev
Date: Sat, 20 Nov 2021 15:11:32 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sat Nov 20 15:11:32 UTC 2021

 Modified Files:
 	src/sys/dev/mii [netbsd-8]: ihphy.c
 	src/sys/dev/pci [netbsd-8]: if_wm.c if_wmreg.h

 Log Message:
 Pull up the following, requested by msaitoh in ticket #1707:

 	sys/dev/pci/if_wm.c				1.716-1.718 via patch
 	sys/dev/pci/if_wmreg.h				1.121
 	sys/dev/mii/ihphy.c				1.20

 - Fix a bug that device timeout still happens when the link is down
   on ICH/PCH. Fixes PR kern/56478.
 - Add some sysctl info for debugging.
 - ihphy(4): Don't power down the PHY when the interface goes down.
 - Use macro. Fix comment.


 To generate a diff of this commit:
 cvs rdiff -u -r1.10.8.2 -r1.10.8.3 src/sys/dev/mii/ihphy.c
 cvs rdiff -u -r1.508.4.43 -r1.508.4.44 src/sys/dev/pci/if_wm.c
 cvs rdiff -u -r1.98.6.12 -r1.98.6.13 src/sys/dev/pci/if_wmreg.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.