 Fix a bug that device timeout still happens on ICH/PCH. Fixes PR kern/56478.

if_wm.c rev. 1.695 for PR kern/40981 still had a problem. The workaround
flag was unexpectedly cleard when a cable is not connected, SIOCINITIFADDR
was called, or if_init was called. Fix it.